# omnidirectional_robot_gazebo

./: README.md
cd/: command.txt  odom_robot_1_20260113_014906.csv
omnidirectional_ws/data_logger/: CMakeLists.txt  package.xml
omnidirectional_ws/data_logger/config/: soccer_logging_params.yaml
omnidirectional_ws/data_logger/launch/: record_soccer_robot.launch
omnidirectional_ws/data_logger/scripts/: bag_to_csv.py  odometry_logger.py  soccer_robot_logger.py  visualize_trajectory.py
omnidirectional_ws/robot_description/: CMakeLists.txt  package.xml
omnidirectional_ws/robot_description/config/: robot_1_controllers.yaml  robot_3_controllers.yaml
omnidirectional_ws/robot_description/launch/: final_robot.launch  final_robot_obstacles.launch  gazebo.launch  msl_field.launch
omnidirectional_ws/robot_description/meshes/STL/: omni_camera.stl  roller.stl
omnidirectional_ws/robot_description/robots/: soccer_robot.urdf.xacro  soccer_robot_control_gazebo.xacro
omnidirectional_ws/robot_description/robots/parts/base/: base.xacro
omnidirectional_ws/robot_description/robots/parts/omni_wheel/: omni_wheel.gazebo
omnidirectional_ws/robot_description/robots/parts/roller/: roller.gazebo
omnidirectional_ws/robot_description/urdf/: obstacle.urdf.xacro
omnidirectional_ws/robot_description/worlds/: kri_nasional.world  no_obstacle.world  soccer_world.world
omnidirectional_ws/soccer_robot_control/: CMakeLists.txt  package.xml
omnidirectional_ws/soccer_robot_control/config/: soccer_robot_control.yaml
omnidirectional_ws/soccer_robot_control/launch/: soccer_robot_control.launch
omnidirectional_ws/soccer_robot_control/scripts/: simple_controller.py  soccer_robot_control.py  square_move.sh
omnidirectional_ws/soccer_robot_logs/: cmd_robot_1_20260112_214905.csv  cmd_robot_1_20260112_215136.csv  cmd_robot_1_20260113_014803.csv  cmd_robot_1_20260113_014906.csv  cmd_robot_1_20260114_034148.csv  cmd_robot_1_20260114_233833.csv  cmd_robot_1_20260116_051913.csv  cmd_robot_1_20260116_052059.csv  cmd_robot_1_20260116_052707.csv  cmd_robot_1_20260116_052805.csv  cmd_robot_1_20260117_002829.csv  cmd_robot_1_20260117_003111.csv  cmd_robot_1_20260117_005630.csv  cmd_robot_1_20260117_005757.csv  cmd_robot_1_20260117_010004.csv  cmd_robot_1_20260117_010346.csv  cmd_robot_1_20260117_011059.csv  cmd_robot_1_20260117_012125.csv  cmd_robot_1_20260117_012654.csv  cmd_robot_1_20260117_012959.csv  cmd_robot_1_20260117_013214.csv  cmd_robot_1_20260117_013345.csv  cmd_robot_1_20260117_013522.csv  cmd_robot_1_20260117_013708.csv  cmd_robot_1_20260117_013908.csv  cmd_robot_1_20260117_014114.csv  cmd_robot_1_20260117_014354.csv  cmd_robot_1_20260117_014717.csv  cmd_robot_1_20260117_014939.csv  cmd_robot_1_20260117_015150.csv  cmd_robot_1_20260117_015411.csv  cmd_robot_1_20260117_015650.csv  cmd_robot_1_20260117_020002.csv  cmd_robot_1_20260117_020323.csv  cmd_robot_1_20260117_020735.csv  joints_robot_1_20260117_015411.csv  odom_robot_1_20260112_214905.csv  odom_robot_1_20260112_215136.csv  odom_robot_1_20260113_014803.csv  odom_robot_1_20260114_034148.csv  (+33 more)
omnidirectional_ws/soccer_robot_logs/plots/: visualization_summary.txt
robot_description/: package.xml
robot_description/config/: robot.rviz  robot_2_controllers.yaml
robot_description/launch/: display.launch  final_robot.launch  kri_nasional.launch  robot_1_control.launch
robot_description/robots/: soccer_robot.urdf.xacro  soccer_robot_control_gazebo.xacro
robot_description/robots/parts/base/: base.gazebo
robot_description/robots/parts/omni_camera/: omni_camera.gazebo  omni_camera.xacro
robot_description/robots/parts/omni_wheel/: omni_wheel.xacro
robot_description/robots/parts/roller/: roller.gazebo  roller.xacro
robot_description/worlds/: kri_nasional.world  msl_field.world  one_obstacle.world  three_obstacles.world  two_obstacles.world
soccer_robot_control/: CMakeLists.txt  package.xml
soccer_robot_control/config/: soccer_robot_control.yaml
soccer_robot_control/launch/: soccer_robot_control.launch
soccer_robot_control/scripts/: simple_controller.py  soccer_robot_control.py
