<?xml version="1.0"?>
<package format="2">
  <name>soccer_robot_control</name>
  <version>0.0.0</version>
  <description>controller for omnidirectional robot</description>

  <maintainer email="febriprasetiyo90@gmail.com">febrilym</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>velocity_controllers</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>

  <export>
  </export>
</package>
